# phishing-website-detection-analysis

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: aws-ecr.yml
artifacts/saved_models/: preprocessor.pkl
conf/: base.yaml
data/processed/ingested/: test.csv  train.csv
data/processed/transformed/: test.npy  train.npy
data/processed/transformed/objects/: preprocessor.pkl
data/processed/validated/: drift_report.yaml  test.csv  train.csv
data/processed/validated/objects/: drift_report.yaml
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_training.py  mongodb_data_seeder.py
src/constants/: __init__.py  model_config.yaml  schema.yaml
src/entity/: artifact_entity.py  config_entity.py
src/pipelines/: prediction_pipeline.py  training_pipeline.py
src/utils/: cloud_utils.py  common.py  exception.py  logging.py  model_utils.py
templates/: table.html
